c4prj2_input/grade.txt
Grading at Tue Mar  9 08:56:17 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:19:7: error: ‘hand’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       add_card_to(hand,c);
       ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
